--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <title>Supreme Obstruction</title>
 
   <!-- import the webpage's stylesheet -->
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="style.css" />
 
   <!-- import the webpage's javascript file -->
-  <script src="/script.js" defer>
+  <script src="script.js" defer>
 
   </script>
 </head>
