--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Supreme Obstruction</title>
+  <title>Obstruction!</title>
 
   <!-- import the webpage's stylesheet -->
   <link rel="stylesheet" href="style.css" />
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <h1>Supreme Obstruction</h1>
+  <h1>Obstruction!</h1>
   <h4 style="color:darkblue">By Raza (Htet) Hlaing</h4>
   <h2 id="chooseBelow">
     Choose one of the below:
@@ -41,8 +41,8 @@
   <button id="backButton">
     Go Back
   </button>
-  <h2 class="levelsC" id="noteBar">Note: Some moves for the computer make take long since the board of obstruction can
-    be big. The first one-two moves the computer does take more than 7 minutes, so the moves are actually randomized.
+  <h2 class="levelsC" id="noteBar">Note: If there are more than 36 spaces left, minimax takes a long time, so if the board is huge, 
+    the first few moves are randomized.
   </h2>
   <h3 id="howPlay">How to Play: Obstruction is a two player game where one player clicks a square to place a letter. You
     cannot place a letter next to another letter. You win if the other player cannot move.</h3>
